Test/dafny4/git-issue90.dfy.expect
git-issue90.dfy(6,8): Error: recursive constraint dependency involving a newtype: MyInt -> x -> y -> MyInt
1 resolution/type errors detected in git-issue90.dfy
